# json_input_app

./: .gitmodules  .travis.yml  CMakeLists.txt  example.cpp
include/json_input_app/: ConsoleApplication.h  InputData.h  Logger.h  Task.h
src/: ConsoleApplication.cpp  InputData.cpp  Logger.cpp
test/: CMakeLists.txt
test/json_input_app/: InputData.cpp
